...
        mainAxisAlignment: MainAxisAlignment.center,
        children: [
          const SizedBox(height: 32),
          const Text(
            'Ajouter une nouvelle période de vacances',
            style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
            key: Key('add_vacation_title'),
          ),
          const SizedBox(height: 32),
          CustomTextField(
            label: 'Nom',
            controller: addVacationViewModel.destinationController,
          ),
...
