...
        children: [
          const Padding(
            padding: EdgeInsets.all(16.0),
            child: Text(
              'Vos périodes de vacances planifiées',
              style: TextStyle(fontSize: 24, fontWeight: FontWeight.bold),
              key: Key('display_vacations_title'),
            ),
          ),
          if (dashboardViewModel.isLoading)
            const Center(child: CircularProgressIndicator())
          else if (dashboardViewModel.vacationPeriods.isEmpty)
            const Center(child: Text('Aucune période de vacances programmée'))
...
